<resources>
    <string name="app_name">Profile_Screen</string>
    <string name="nguy_n_h_i_lu_n">Nguyễn Hải Luân</string>
    <string name="project">Project</string>
    <string name="newbie">Newbie</string>
    <string name="position">Position</string>
    <string name="infomation">Infomation</string>
    <string name="message">Message</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo2">TODO</string>
    <string name="login">Login</string>
    <string name="username">Username..</string>
    <string name="password">Password..</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up1">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="user_name">User name</string>
    <string name="password1">Password</string>
    <string name="back">BACK</string>
    <string name="sign_up2">SIGN UP</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
</resources>