<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="115dp"
        android:layout_height="110dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/todo3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="236dp"
        android:layout_height="57dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="184dp"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:text="@string/nguy_n_h_i_lu_n"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="240dp"
        android:gravity="center"
        android:text="@string/newbie"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="158dp"
        android:layout_height="113dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="344dp"
        android:background="@drawable/gradient_chill"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="7dp"
            android:contentDescription="@string/todo4"
            app:srcCompat="@drawable/briefing" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/project"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="158dp"
        android:layout_height="113dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="344dp"
        android:background="@drawable/gradient_chill"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="7dp"
            android:contentDescription="@string/todo5"
            app:srcCompat="@drawable/leadership" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/position"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="158dp"
        android:layout_height="113dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/gradient_chill"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="7dp"
            android:contentDescription="@string/todo1"
            app:srcCompat="@drawable/information" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/infomation"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="158dp"
        android:layout_height="113dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/gradient_chill"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="7dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/conversation" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/message"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>