<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@drawable/gradient">


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="136dp"
        android:layout_height="119dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="144dp"
        android:contentDescription="@string/todo7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/adduser"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="284dp"
        android:text="@string/sign_up1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="252dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="364dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/first_name"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="252dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="420dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/last_name"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="252dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="476dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/user_name"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="252dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="532dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password1"
        android:inputType="textPassword"
        android:textColorHint="#880E4F"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="624dp"
        android:backgroundTint="@drawable/gradient_chill"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="624dp"
        android:backgroundTint="@drawable/gradient_chill"
        android:text="@string/sign_up2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>