<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="94dp"
        android:layout_height="91dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/todo8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="256dp"
        android:text="@string/login"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView8"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="328dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:textColorHint="#880E4F"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/textView9"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="396dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#880E4F"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="108dp"
        android:layout_height="49dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="528dp"
        android:backgroundTint="@drawable/gradient_chill"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="108dp"
        android:layout_height="49dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="528dp"
        android:backgroundTint="@drawable/gradient_chill"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>